2003-11-07  Synge Todo  <wistaria@comp-phys.org>

	* Added improved estimators for uniform/staggered magnetization^2,
	etc.
	
2003-11-06  Synge Todo  <wistaria@comp-phys.org>
	
	* version 3.0b2 released.

	- prerequisites: boost-ss-20031102, boost-ss-20031102.patch,
	alps-20031105

	- TODO: optimization, improved estimators, more measurements,
	license issue.

2003-11-06  Synge Todo  <wistaria@comp-phys.org>
	
	* Moved measurements into looper/measuerment.h

	* Added is_bipartite member in [path_integral,sse]::parameter_type.

	* Removed check_and_resize from path_integral.h.

	* Added specific heat measurement.

	* Fixed staggered susceptibility measurement.
	
2003-11-05  Synge Todo  <wistaria@comp-phys.org>
	
	* Modified Makefile.in so that MPI version of programs (qmc_mpi,
	percolation_mpi) will also be built.

	* Added measurement for staggered susceptibility (unimproved
	estimator).  (SSE output seems still incorrect.)
	
2003-11-05  Synge Todo  <wistaria@comp-phys.org>
	
	* version 3.0b1 released.

	- prerequisites: boost-ss-20031102, boost-ss-20031102.patch,
	alps-20031105